# py-fastapi-starter

./: .dockerignore  .env.example  .gitignore  .versions  Dockerfile  Dockerfile.cloudrun  LICENSE  Makefile  README.md  cloudbuild-buildx.yaml  cloudbuild.yaml  docker-compose.simple.yml  docker-compose.yml  pyproject.toml  run.py  start-services.sh  test_adk_fixed.py
.github/workflows/: ci.yml
app/: main.py
app/api/: adk.py
app/core/: adk_agent.py  context.py  gemini.py  instrumentation.py  logger.py  observability_service.py  settings.py  test_data_generator.py  tracer.py
app/core/middleware/: logging.py  request_id.py
app/core/telemetry/: tracing.py
app/utils/: __init__.py  common.py  lifespan.py  log_parser.py  logging.py
examples/: test_observability_chat.py
scripts/logging/: fluent-bit.conf  grafana-datasources.yaml  loki-config.yaml  parsers.conf
scripts/logging/dashboards/: fastapi-logs.json
scripts/opentelemetry/: otel-collector-config.yaml
scripts/tracing/: tempo-config.yaml
static/: adk-web.html
tests/: test_main.py  test_settings.py
