[project]
name = "py-fastapi-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contextvars>=2.4",
    "fastapi>=0.116.1",
    "python-json-logger>=3.3.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff"
]
