[project]
name = "py-fastapi-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contextvars>=2.4",
    "fastapi>=0.116.1",
    "opentelemetry-api>=1.35.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.35.0",
    "opentelemetry-sdk>=1.35.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "opentelemetry-instrumentation>=0.46b0",
    "python-json-logger>=3.3.0",
    "uvicorn>=0.35.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.1.1",
    "pydantic-settings>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "requests",
]
